utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/valid/UniqueAssignment.option
option noDuplicatePropCoCo: String {
    label "A Label"
    required true
}
