utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/invalid/UniqueAssignment.option
option noDuplicatePropCoCo: String {
    label "A Label"
    label "An other Label"
}
